--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 REACT_APP_CLOUD_NAME_CLOUDINARY = ddwo8iuhl
 MONGODB_URI = mongodb+srv://munsifshaifalikhan:*Mun143Ane*@mern.e6e4gzl.mongodb.net/MERN?retryWrites=true&w=majority&appName=MERN
 TOKEN_SECRET_KEY = "34523jkfsdlkfjewwr3jwefdgkrh4w3hr3jwef"
-FRONTEND_URL =  http://localhost:3000
+FRONTEND_URL =  https://zephyr-wears-frontend.vercel.app
